--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
   <head>
     <title>Blog</title>
-    <meta property="og:title" content="Welcome">
+    <meta property="og:title" content="Сiao">
     <meta property="og:description" content="Il mio blog">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
